@@ -13,6 +13,7 @@ Bugs fixed
 * #2602: URL redirection breaks the hyperlinks generated by `sphinx.ext.intersphinx`
 * #2613: Show warnings if merged extensions are loaded
 * #2619: make sure amstext LaTeX package always loaded (ref: d657225, 488ee52, 9d82cad and #2615)
+* #2593: latex crashes if any figures in the table
 
 
 Release 1.4.2 (released May 29, 2016)
